config-root/namespaces/jx-staging/nodey506/deployment.yaml
# Source: nodey506/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodey506-nodey506
  labels:
    draft: draft-app
    chart: "nodey506-1.0.3"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: nodey506-nodey506
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: nodey506-nodey506
    spec:
      containers:
        - name: nodey506
          image: "gcr.io/jenkins-x-labs-bdd/nodey506:1.0.3"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
