config-root/namespaces/jx-staging/nodey506/ingress.yaml
# Source: nodey506/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nodey506
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nodey506
              servicePort: 80
      host: nodey506-jx.35.238.123.29.nip.io
